Fixed Text and tightened game entry spacing

--- a/src/components/game-entry.module.styl
+++ b/src/components/game-entry.module.styl
@@ -1,9 +1,13 @@
 .container
     max-width 400px
     width 100%
+    padding 10px
 
 .description
-    margin 0px
+    margin-bottom 10px
+
+.name
+    margin-bottom 10px
 
 .links
     display flex
